We aligned the text on the webpage, fixed elements such as bolding, padding, and line spacing

--- a/website.css
+++ b/website.css
@@ -1,10 +1,14 @@
 body{
     background-color: white;
-}
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 
-body *
-{
-   
+}
+p, aside, h1, h2, h3, div, section, address{
+    padding: 0px 48px;
+        max-width: 1280px;
 }
 header{
     background-image: url('imgs/HeartofKYWebLogo.jpg');
@@ -14,6 +18,7 @@ header{
     height: 430px;
     justify-content: center;
     align-items:center;
+    align-self: stretch;
     
 }
 .logo{
@@ -101,10 +106,31 @@ h2{
  
 }
 address{
-
+    font-style: normal;
+    font-family: 'PT Sans';
+    font-weight: 400;
+    font-size: 14pt;
+    line-height: 1.5;
 }
 h3{
-
+    font-weight: normal;
+    margin: 0px;
+    font-size: 14pt;
+}
+address~p{
+    font-weight: bold;
+    margin: 0px 0px 30px 0px;
+}
+address~p~p{
+    margin: 0px;
+}
+#mission p~p{
+    font-weight: 600;
+    color: rgba(0, 114, 153, 1);
+    text-align: center;
+    font-family: 'Roboto Slab';
+    font-size: 14pt;
+    line-height: 1.5;
 }
 .imgwrapper{
 
